--- a/public/styles.css
+++ b/public/styles.css
@@ -38,17 +38,23 @@ nav {
 nav a {
     list-style: none;
     cursor: pointer;
+    font-size: x-large;
 }
 
 img {
     font-size: xx-large;
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 500px;
+    max-height: 500px;
+}
+
+h1 {
+    font-size: 3em;
 }
 
 h2 {
     font-size: 5em;
     margin: 40px;
+    margin-bottom: 0;
 }
 
 .colored {
@@ -87,14 +93,8 @@ h2 {
     display: grid;
     grid-template: repeat(1, 1fr) / repeat(3, 1fr);
     grid-auto-flow: row dense;
-    gap: 20px;
+    gap: 100px;
     margin: 40px;
-}
-
-.card {
-    padding: 40px;
-    background-color: #212121;
-    border-radius: 15px;
 }
 
 .card p {
@@ -169,6 +169,9 @@ li {
     img {
         max-width: 70%;
     }
+    h1 {
+        font-size: 2em;
+    }
     nav {
         flex-direction: column;
         gap: 10px;
@@ -202,5 +205,8 @@ li {
     }
     ul {
         margin: 0 20px;
+    }
+    #myprojects .small {
+        margin: 0 20px 20px 20px;
     }
 }
