--- a/public/styles.css
+++ b/public/styles.css
@@ -63,14 +63,14 @@ header .right a {
 nav {
     text-align: center;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     gap: 25px;
     background-color: #D5CEA3;
     padding: 20px;
     font-size: larger;
 }
 
-#top  {
+#top {
     padding: 80px;
     font-size: 4em;
 }
@@ -81,6 +81,42 @@ nav {
 
 section {
     margin-bottom: 60px;
+}
+
+#moreaboutme {
+    padding: 80px;
+    font-size: 2em;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: minmax(300px, auto);
+    gap: 40px;
+}
+
+.unit .title {
+    color: #1A120B;
+}
+
+.unit ul {
+    font-size: smaller;
+    margin-top: 20px;
+}
+
+.unit ul .details {
+    font-size: smaller;
+    font-style: italic;
+}
+
+.unit ul .dates {
+    font-size: smaller;
+}
+
+#seeprojects {
+    background-color: #D5CEA3;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (max-width: 1200px) {}
