--- a/public/styles.css
+++ b/public/styles.css
@@ -84,6 +84,7 @@ nav {
     box-shadow: none;
     border: none;
     padding: 0;
+    padding-top: 80px;
 }
 
 .bottomnav div {
@@ -105,6 +106,7 @@ nav {
 #moreaboutme {
     padding: 80px;
     padding-bottom: 0;
+    padding-top: 0;
     font-size: 2em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -163,7 +165,6 @@ nav {
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(60, 42, 33, 0.31);
-    height: 300px;
     padding: 80px;
     display: flex;
     align-items: center;
@@ -173,6 +174,75 @@ nav {
     color: rgba(213, 206, 163, 1)
 }
 
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+    #moreaboutme {
+        grid-template-columns: repeat(2, 1fr);
+        padding-top: 0;
 
-@media (max-width: 700px) {}
+    }
+}
+
+@media (max-width: 700px) {
+
+    .mobilenone {
+        display: none;
+    }
+
+    header {
+        padding: 20px;
+        padding-top: 40px;
+    }
+
+    header .left, header .right {
+        display: none;
+    }
+
+    nav {
+        margin: 0;
+        flex-direction: column;
+        gap: 10px;
+        background-color: transparent;
+        border: none;
+        box-shadow: none;
+        font-size: larger;
+    }
+
+    #top {
+        font-size: 2em;
+        padding: 40px;
+    }
+
+    #moreaboutme {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: minmax(auto, auto);
+        padding: 40px;
+        padding-top: 0;
+    }
+
+    #calltoaction {
+        padding: 40px 00px;
+    }
+
+    #calltoaction .bottom {
+        padding: 40px;
+        border-radius: 0;
+    }
+
+    #seeprojects {
+        padding: 20px;
+        height: 300px;
+    }
+
+    #seeprojects div {
+        text-align: center;
+    }
+
+    .bottomnav {
+        padding: 0;
+    }
+
+    .bottomnav * {
+        justify-content: center;
+        
+    }
+}
