--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,36 @@
   }
 }
 
-body {
+html, body {
   color: var(--text-color);
   background: var(--background-color);
+  width: 100%;
+  height: 100%;
 }
 
 @layer utilities {  
   .text-balance {
     text-wrap: balance;
+  }
+
+  .scrollbar::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: transparent;
+    margin-bottom: 40px;
+    margin-top: 40px;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 130px;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #c0a0b9;
   }
 }
